fixed syntax issue in js and visibility of #colors container

--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,6 @@
   width: 100%;
   height: auto;
   text-align: justify;
-  display: none;
 }
 
 #colors:after {
